# jogair_project

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  hourlyupdatehair  main.py  pollenhourlyupdate  pyproject.toml  requirements.txt
app/: index.html
src/collectors/: air_quality_loader.py  live_air_quality_loader.py
src/collectors/pipeline/: temporal_routing_orchestrator.py
src/collectors/pipeline/daily/: routing_engine.py
tests/: __init__.py  test_air_quality_loader.py  test_live_air_quality_loader.py  test_live_data_integration.py  test_routing_engine.py  test_temporal_routing_integration.py
