[project]
name = "jogair-project"
version = "0.1.0"
description = "Smart jogging app add-on for healthier running in Danish Smart Cities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]
